Better fix for 1px gap

--- a/styles/style.css
+++ b/styles/style.css
@@ -83,7 +83,7 @@ div {
 
 #rightColumn {
 	right: 0px;
-	width: 51%;
+	width: 50.005%;
 	position: fixed;
 }
 
